# libbmd

./: CMakeLists.txt  README.md  libbmd.pc.in
cmake-modules/: FindDeckLinkSDK.cmake  FindLibAV.cmake
src/: autodetect.cpp
